partner logos and tables

--- a/our_land/templates/blocks/partners.html
+++ b/our_land/templates/blocks/partners.html
@@ -2,8 +2,13 @@
     <div class="wrapper text-center">
         <h2>Partners</h2>
         <p>Our Land is made possible through support from the following partners:</p>
-
-        <a href="https://codeforafrica.org/" target="_blank" rel="noopener">
-            <img src="{{ STATIC_URL }}img/logos/cfafrica.png" alt="Code for Africa"></a>
+          <a href="https://www.netwerk24.com/landbou/" target="_blank" rel="noopener">
+            <img src="{{ STATIC_URL }}img/logos/lad.png" alt="landbouweekblad"></a>
+          <a href="https://www.netwerk24.com/za/rapport/" target="_blank" rel="noopener">
+            <img src="{{ STATIC_URL }}img/logos/rap.png" alt="Rapport"></a>
+          <a href="https://codeforafrica.org/" target="_blank" rel="noopener">
+            <img src="{{ STATIC_URL }}img/logos/cfa.png" alt="City Press"></a>
+          <a href="https://city-press.news24.com/" target="_blank" rel="noopener">
+            <img src="{{ STATIC_URL }}img/logos/city-press-logo.png" alt="City Press"></a>
     </div>
 </div>
