--- a/our_land/templates/profile/profile_detail.html
+++ b/our_land/templates/profile/profile_detail.html
@@ -201,6 +201,21 @@
             {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.redistributedlandcostinrands_stat stat_type='number' decimals="-2" %}
         </div>
       </section>
+      <section class="clearfix stat-row">
+        <div class="column-full">
+            <div id="chart-column-redistributionandrestitution-redistributeprogrammeprojectsbyyear" data-chart-title="Project Transfered through Redistribution Programme in the Financial Year 2009/2010 to 2017/2018"></div>
+        </div>
+      </section>
+      <section class="clearfix stat-row">
+        <div class="column-full">
+            <div id="chart-column-redistributionandrestitution-redistributeprogrammebeneficiariesbyyear" data-chart-title="Beneficiaries Benefitted from the Redistribution Programme in the Financial Year 2009/2010 to 2017/2018"></div>
+        </div>
+      </section>
+      <section class="clearfix stat-row">
+        <div class="column-full">
+            <div id="chart-column-redistributionandrestitution-redistributeprogrammehouseholdsbyyear" data-chart-title="Households Benefitted from the Redistribution Programme in the Financial Year 2009/2010 to 2017/2018"></div>
+        </div>
+      </section>
     </div>
   </article>
 {% endif %}
