--- a/our_land/templates/profile/profile_detail.html
+++ b/our_land/templates/profile/profile_detail.html
@@ -216,6 +216,22 @@
             <div id="chart-column-redistributionandrestitution-redistributeprogrammehouseholdsbyyear" data-chart-title="Households Benefitted from the Redistribution Programme in the Financial Year 2009/2010 to 2017/2018"></div>
         </div>
       </section>
+      <section class="clearfix stat-row">
+        <div class="column-full">
+          <div id="chart-column-redistributionandrestitution-femalepartybenefited" data-chart-title="Number of females benefited from thee Redistribution Programme in the Financial Year 2009/2010 to 2017/2018"></div>
+        </div>
+      </section>
+      <section class="clearfix stat-row">
+        <div class="column-full">
+          <div id="chart-column-redistributionandrestitution-disabledpeoplepartybenefited" data-chart-title="Number of disabled people benefited from the Redistribution Programme in the Financial Year 2009/2010 to 2017/2018"></div>
+        </div>
+      </section>
+      <section class="clearfix stat-row">
+        <div class="column-full">
+          <div id="chart-column-redistributionandrestitution-youthpartybenefited" data-chart-title="Number of youth benefited from the Redistribution Programme in the Financial Year 2009/2010 to 2017/2018"></div>
+        </div>
+
+      </section>
     </div>
   </article>
 {% endif %}
