--- a/our_land/templates/profile/profile_detail.html
+++ b/our_land/templates/profile/profile_detail.html
@@ -245,6 +245,48 @@
           <div id="chart-histogram-redistributionandrestitution-hectaresacquiredrestitution" data-chart-title="Hectares Acquired in the Restitution Programme from 2009/2010 to 2017/2018"></div>
         </div>
       </section>
+      <section class="clearfix stat-row">
+        <div class="column-third">
+        </div>
+        <div class="column-two-thirds">
+          <div id="chart-histogram-redistributionandrestitution-landcostrestitution" data-chart-title="Land Cost Restitution Programme from 2009/2010 to 2017/2018"></div>
+        </div>
+      </section>
+      <section class="clearfix stat-row">
+        <div class="column-third">
+        </div>
+        <div class="column-two-thirds">
+          <div id="chart-histogram-redistributionandrestitution-householdsrestitution" data-chart-title="Households benefited in the Restitution Programme from 2009/2010 to 2017/2018"></div>
+        </div>
+      </section>
+      <section class="clearfix stat-row">
+        <div class="column-third">
+        </div>
+        <div class="column-two-thirds">
+          <div id="chart-histogram-redistributionandrestitution-beneficiariesrestitution" data-chart-title="Beneficiaries in the Restitution Programme from 2009/2010 to 2017/2018"></div>
+        </div>
+      </section>
+      <section class="clearfix stat-row">
+        <div class="column-third">
+        </div>
+        <div class="column-two-thirds">
+          <div id="chart-histogram-redistributionandrestitution-disabilitiesrestitution" data-chart-title="People with disabilities benefited Restitution Programme from 2009/2010 to 2017/2018"></div>
+        </div>
+      </section>
+      <section class="clearfix stat-row">
+        <div class="column-third">
+        </div>
+        <div class="column-two-thirds">
+          <div id="chart-histogram-redistributionandrestitution-femaleheadedhouseholdsrestitution" data-chart-title="Number of female headed households restitution Programme from 2009/2010 to 2017/2018"></div>
+        </div>
+      </section>
+      <section class="clearfix stat-row">
+        <div class="column-third">
+        </div>
+        <div class="column-two-thirds">
+          <div id="chart-histogram-redistributionandrestitution-financialcompensationrestitution" data-chart-title="Financial Compensation, Restitution Programme from 2009/2010 to 2017/2018"></div>
+        </div>
+      </section>
     </div>
   </article>
 {% endif %}
