--- a/our_land/templates/profile/profile_detail.html
+++ b/our_land/templates/profile/profile_detail.html
@@ -70,10 +70,10 @@
       <div class="section-container">
         <section class="clearfix stat-row">
             <div class="column-half">
-                <div id="chart-histogram-farmland-private_land_ownership_in_hectares_per_category" data-stat-type="scaled-percentage" data-chart-title="Private land Ownership"></div>
+                <div id="chart-histogram-farmland-private_land_ownership_in_hectares_per_category" data-stat-type="percentage" data-chart-title="Private land Ownership"></div>
             </div>
             <div class="column-half">
-              <div id="chart-pie-farmland-number_of_private_land_owners_by_category" data-stat-type="percentage" data-chart-title="Number of Private Land Owners by Category" data-initial-sort="-value"></div>
+              <div id="chart-pie-farmland-number_of_private_land_owners_by_category" data-stat-type="percentage" data-chart-title="Percent Number of Private Land Owners by Category" data-initial-sort="-value"></div>
             </div>
         </section>
         <section class="clearfix stat-row">
@@ -81,12 +81,12 @@
                 <div id="chart-pie-farmland-land_ownership_in_hectares_by_race" data-stat-type="percentage" data-chart-title="Individual Land Ownership percent Hectares by Race" data-initial-sort="-value"></div>
             </div>
             <div class="column-half">
-              <div id="chart-pie-farmland-number_of_land_owners_per_race" data-stat-type="percentage" data-chart-title="Number of Individual Land Owners per Race" data-initial-sort="-value"></div>
+              <div id="chart-pie-farmland-number_of_land_owners_per_race" data-stat-type="number" data-chart-title="Number of Individual Land Owners per Race" data-initial-sort="-value"></div>
             </div>
         </section>
         <section class="clearfix stat-row">
             <div class="column-half">
-                <div id="chart-histogram-farmland-land_ownership_in_hectares_by_gender" data-stat-type="scaled-percentage" data-chart-title="Individual Land Ownership percent Hectares by Gender"></div>
+                <div id="chart-histogram-farmland-land_ownership_in_hectares_by_gender" data-stat-type="percentage" data-chart-title="Individual Land Ownership percent Hectares by Gender"></div>
             </div>
             <div class="column-half">
               <div id="chart-column-farmland-number_of_land_owners_per_gender" data-stat-type="number" data-chart-title="Number of Individual Land Owners per Gender"></div>
@@ -188,7 +188,7 @@
         <div class="column-third">
             {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.redistributedlandinhectares_stat stat_type='number' decimals="-2" %}
         </div>
-        <div class="column-thirds">
+        <div class="column-two-thirds">
           <div id="chart-histogram-redistributionandrestitution-hectarestransferredperprovincebyyear" data-chart-title="Hectares transferred in the Redistributiton Programme from 2009/2010 to 2017/2018"></div>
         </div>
       </section>
@@ -240,6 +240,7 @@
       <section class="clearfix stat-row">
         <h2 class="header-for-columns"><a class="permalink"> Land Restitution Programme <i class="fa fa-link"></i></a></h2>
         <div class="column-third">
+            {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.redistributedlandinhectares_stat stat_type='number' decimals="-2" %}
         </div>
         <div class="column-two-thirds">
           <div id="chart-histogram-redistributionandrestitution-hectaresacquiredrestitution" data-chart-title="Hectares Acquired in the Restitution Programme from 2009/2010 to 2017/2018"></div>
@@ -247,13 +248,15 @@
       </section>
       <section class="clearfix stat-row">
         <div class="column-third">
+            {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.redistributedlandinhectares_stat stat_type='number' decimals="-2" %}
         </div>
         <div class="column-two-thirds">
           <div id="chart-histogram-redistributionandrestitution-landcostrestitution" data-chart-title="Land Cost Restitution Programme from 2009/2010 to 2017/2018"></div>
         </div>
       </section>
       <section class="clearfix stat-row">
-        <div class="column-third">
+        <div class="column-third">  {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.redistributedlandinhectares_stat stat_type='number' decimals="-2" %}
+
         </div>
         <div class="column-two-thirds">
           <div id="chart-histogram-redistributionandrestitution-householdsrestitution" data-chart-title="Households benefited in the Restitution Programme from 2009/2010 to 2017/2018"></div>
@@ -261,6 +264,7 @@
       </section>
       <section class="clearfix stat-row">
         <div class="column-third">
+            {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.redistributedlandinhectares_stat stat_type='number' decimals="-2" %}
         </div>
         <div class="column-two-thirds">
           <div id="chart-histogram-redistributionandrestitution-beneficiariesrestitution" data-chart-title="Beneficiaries in the Restitution Programme from 2009/2010 to 2017/2018"></div>
@@ -268,6 +272,7 @@
       </section>
       <section class="clearfix stat-row">
         <div class="column-third">
+            {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.redistributedlandinhectares_stat stat_type='number' decimals="-2" %}
         </div>
         <div class="column-two-thirds">
           <div id="chart-histogram-redistributionandrestitution-disabilitiesrestitution" data-chart-title="People with disabilities benefited Restitution Programme from 2009/2010 to 2017/2018"></div>
@@ -290,6 +295,19 @@
     </div>
   </article>
 {% endif %}
+<article id="redistribution-restitution" class="clearfix">
+  <header class="section-contents">
+      <h1>Agricultural Land Sales</h1>
+  </header>
+  <div class="section-container">
+    <section class="clearfix stat-row">
+      <h2 class="header-for-columns"><a class="permalink">Land Sales Distribution <i class="fa fa-link"></i></a></h2>
+      <div class="column-two-thirds">
+        <div id="chart-histogram-landsale-landsalestransaction" data-chart-title="Number of transactions in 12 month"></div>
+      </div>
+    </section>
+  </div>
+</article>
 
   {% include 'settings_js.html' %}
   {% block body_javascript %}
