--- a/our_land/templates/profile/profile_detail.html
+++ b/our_land/templates/profile/profile_detail.html
@@ -62,7 +62,7 @@
 
 
 {% block profile_detail %}
-{%if not landsales.landsalestransaction.is_missing or landsales.landsaleshectares.is_missing %}
+{% if not landsales.landsalestransaction.is_missing or not landsales.landsaleshectares.is_missing %}
 <article id="redistribution-restitution" class="clearfix">
   <header class="section-contents">
       <h1>Agricultural Land Sales</h1>
@@ -161,7 +161,7 @@
       </div>
   </article>
 {% endif %}
-{% if not ervenland.is_missing %}
+{% if not ervenland.erven_land_ownership_in_hectares_by_race.is_missing %}
   <article id="erven-land" class="clearfix">
       <header class="section-contents">
           <h1>Erven Land</h1>
@@ -194,7 +194,7 @@
       </div>
   </article>
 {% endif %}
-{% if not sectionaltitleland.is_missing %}
+{% if not sectionaltitleland.sectional_title_ownership_in_hectares_per_race.is_missing %}
   <article id="sectional-title-land" class="clearfix">
     <header class="section-contents">
         <h1>Sectional Title Land</h1>
@@ -235,7 +235,7 @@
     </div>
   </article>
 {% endif %}
-{% if not redistributionandrestitution.is_missing %}
+{% if not redistributionandrestitution.hectarestransferredperprovincebyyear.is_missing %}
   <article id="redistribution-restitution" class="clearfix">
     <header class="section-contents">
         <h1>Land Redistribution and Restitution</h1>
@@ -305,15 +305,7 @@
         </div>
       </section>
       <section class="clearfix stat-row">
-        <div class="column-third">
-            {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.redistributedlandinhectares_stat stat_type='number' decimals="-2" %}
-        </div>
-        <div class="column-two-thirds">
-          <div id="chart-histogram-redistributionandrestitution-landcostrestitution" data-chart-title="Land Cost Restitution Programme from 2009/2010 to 2017/2018"></div>
-        </div>
-      </section>
-      <section class="clearfix stat-row">
-        <div class="column-third">  {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.redistributedlandinhectares_stat stat_type='number' decimals="-2" %}
+        <div class="column-third">  {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.householdsrestitution_stat stat_type='number' decimals="-2" %}
 
         </div>
         <div class="column-two-thirds">
@@ -322,7 +314,7 @@
       </section>
       <section class="clearfix stat-row">
         <div class="column-third">
-            {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.redistributedlandinhectares_stat stat_type='number' decimals="-2" %}
+            {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.beneficiariesrestitution_stat stat_type='number' decimals="-2" %}
         </div>
         <div class="column-two-thirds">
           <div id="chart-histogram-redistributionandrestitution-beneficiariesrestitution" data-chart-title="Beneficiaries in the Restitution Programme from 2009/2010 to 2017/2018"></div>
@@ -330,14 +322,7 @@
       </section>
       <section class="clearfix stat-row">
         <div class="column-third">
-            {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.redistributedlandinhectares_stat stat_type='number' decimals="-2" %}
-        </div>
-        <div class="column-two-thirds">
-          <div id="chart-histogram-redistributionandrestitution-disabilitiesrestitution" data-chart-title="People with disabilities benefited Restitution Programme from 2009/2010 to 2017/2018"></div>
-        </div>
-      </section>
-      <section class="clearfix stat-row">
-        <div class="column-third">
+          {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.femaleheadedhouseholdsrestitution_stat stat_type='number' decimals="-2" %}
         </div>
         <div class="column-two-thirds">
           <div id="chart-histogram-redistributionandrestitution-femaleheadedhouseholdsrestitution" data-chart-title="Number of female headed households restitution Programme from 2009/2010 to 2017/2018"></div>
@@ -345,9 +330,13 @@
       </section>
       <section class="clearfix stat-row">
         <div class="column-third">
+          <div id="chart-histogram-redistributionandrestitution-financialcompensationrestitution" data-chart-title="Financial Compensation, Restitution Programme in 2017/2018"></div>
         </div>
-        <div class="column-two-thirds">
-          <div id="chart-histogram-redistributionandrestitution-financialcompensationrestitution" data-chart-title="Financial Compensation, Restitution Programme from 2009/2010 to 2017/2018"></div>
+        <div class="column-third">
+          <div id="chart-histogram-redistributionandrestitution-disabilitiesrestitution" data-chart-title="People with disabilities benefited Restitution Programme in 2017/2018"></div>
+        </div>
+        <div class="column-third">
+          <div id="chart-histogram-redistributionandrestitution-landcostrestitution" data-chart-title="Land Cost in Restitution Programme in 2017/2018"></div>
         </div>
       </section>
     </div>
