--- a/our_land/templates/profile/profile_detail.html
+++ b/our_land/templates/profile/profile_detail.html
@@ -127,6 +127,11 @@
       </header>
       <div class="section-container">
         <section class="clearfix stat-row">
+          <aside>
+            <br/>
+            <br/>
+            CBOs,Community-Based Organisations, includes non-governmental organizations, churches, etc.
+          </aside>
             <div class="column-half">
                 <div id="chart-histogram-farmland-private_land_ownership_in_hectares_per_category" data-stat-type="scaled-percentage" data-chart-title="Private land Ownership"></div>
             </div>
@@ -135,6 +140,10 @@
             </div>
         </section>
         <section class="clearfix stat-row">
+          <aside>
+            <br/>
+            Co-ownership: Land owned by owners who are classified in different categories e.g. land parcel co-owned by Individual(s) and a Trusts, male and female, etc.
+          </aside>
             <div class="column-half">
                 <div id="chart-pie-farmland-land_ownership_in_hectares_by_race" data-stat-type="percentage" data-chart-title="Percent total Hectares owned by Individual per Race" data-initial-sort="-value"></div>
             </div>
@@ -168,6 +177,12 @@
       </header>
       <div class="section-container">
         <section class="clearfix stat-row">
+          <aside>
+          Erven Land: legal term used in Namibia, South Africa and Swaziland to describe a piece of
+           land registered in a deeds registry as an erf, lot, plot or stand. Includes every defined portion,
+            not intended to be a public place, of a piece of land laid out as a township,
+            whether or not it has been formally recognized, approved or proclaimed as such.
+          </aside>
             <div class="column-half">
                 <div id="chart-histogram-ervenland-erven_land_ownership_in_hectares_by_race" data-stat-type="scaled-percentage" data-chart-title="Percent total Hectares of Erven Land owned by Individual  by Race"></div>
             </div>
@@ -201,6 +216,11 @@
     </header>
     <div class="section-container">
       <section class="clearfix stat-row">
+        <aside>
+          <br/>
+          <br/>
+          Sectional Title Land: Separate ownership of units or sections within a complex or development
+        </aside>
           <div class="column-half">
               <div id="chart-histogram-sectionaltitleland-sectional_title_ownership_in_hectares_per_category" data-stat-type="scaled-percentage" data-chart-title="Percent Number of Individual Sectional Title Ownership in Hectares by Category"></div>
           </div>
@@ -209,6 +229,9 @@
           </div>
       </section>
       <section class="clearfix stat-row">
+        <aside>
+          Trusts in terms of Trust Property Control Act, No 57 of 1988 <a href="http://www.justice.gov.za/legislation/acts/1988-57.pdf">the Trust Act</a>
+        </aside>
           <div class="column-half">
               <div id="chart-pie-sectionaltitleland-sectional_title_ownership_in_hectares_per_race" data-stat-type="scaled-percentage" data-chart-title="Percent Number of Individual Sectional Title Ownership in Hectares by Race" data-initial-sort="-value"></div>
           </div>
@@ -243,6 +266,12 @@
     <div class="section-container">
       <section class="clearfix stat-row">
         <h2 class="header-for-columns"><a class="permalink"> Land Redistribution Programme <i class="fa fa-link"></i></a></h2>
+        <aside>
+          <br />
+          Following centuries of colonial rule and decades of apartheid rule,
+          democratic South Africa set out to redistribute rights in land as a way
+          to remedy past racial injustice and lay the basis for more equitable development.
+        </aside>
         <div class="column-third">
             {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.redistributedlandinhectares_stat stat_type='number' decimals="-2" %}
         </div>
@@ -297,6 +326,11 @@
       </section>
       <section class="clearfix stat-row">
         <h2 class="header-for-columns"><a class="permalink"> Land Restitution Programme <i class="fa fa-link"></i></a></h2>
+        <aside>
+          <br />
+          Restitution of Land Rights is to offer a solution to people who had
+          lost their land as a result of racially discriminatory practices such as forced removals.
+        </aside>
         <div class="column-third">
             {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.redistributedlandinhectares_stat stat_type='number' decimals="-2" %}
         </div>
@@ -305,8 +339,8 @@
         </div>
       </section>
       <section class="clearfix stat-row">
-        <div class="column-third">  {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.householdsrestitution_stat stat_type='number' decimals="-2" %}
-
+        <div class="column-third">
+          {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.householdsrestitution_stat stat_type='number' decimals="-2" %}
         </div>
         <div class="column-two-thirds">
           <div id="chart-histogram-redistributionandrestitution-householdsrestitution" data-chart-title="Households benefited in the Restitution Programme from 2009/2010 to 2017/2018"></div>
