changes from local

--- a/our_land/templates/profile/profile_detail.html
+++ b/our_land/templates/profile/profile_detail.html
@@ -252,7 +252,7 @@
       </section>
       <section class="clearfix stat-row">
         <div class="column-half">
-            <div id="chart-pie-redistributionandrestitution-redistributedlandusebreakdown" data-stat-type="percentage" data-chart-title="Redistribution Programme Statistic, year 2017/2018"></div>
+            <div id="chart-pie-redistributionandrestitution-redistributedlandusebreakdown" data-stat-type="percentage" data-chart-title="Redistribution Programme Statistic, Percent land use breakdown year 2017/2018"></div>
         </div>
       </section>
       <section class="clearfix stat-row">
