edit footer description, blurb, and text syle

--- a/our_land/templates/_footer.html
+++ b/our_land/templates/_footer.html
@@ -1,20 +1,13 @@
 {% load staticfiles %}
-<div class="column-half">
-    <p class="smaller"><strong>{{ HURUMAP.name }}</strong>
-      Our Land is a joint project of City Press, Rapport, Landbou Weekblad and Code for Africa.
-      The data site gives infomediaries like journalists and civic activists an
-      easy toolkit for finding and embedding interactive data visualizations
-      into their storytelling on land ownership in South Africa. The data that informs
-       the land ownership debate is often contested and incomplete,  We will keep sourcing,
-       cleaning and adding data sets to this site, and work towards
-       becoming the authoritative data source on this issue
+<div class="column-two-thirds">
+    <p class="smaller"><strong>{{ HURUMAP.name }}</strong> {{ HURUMAP.description }}
     </p>
     <p class="smaller">
         The project is built on <a href="http://wazimap.readthedocs.org/" target="_blank" rel="noopener">Wazimap</a>, an open source platform by <a href="https://openup.org.za/" target="_blank" rel="noopener">OpenUp</a> and <a href="http://www.mediamonitoringafrica.org/" target="_blank" rel="noopener">Media Monitoring Africa</a> for making census data more understandable.
     </p>
     <br/>
 </div>
-<div class="column-half text-center">
+<div class="column-third text-center">
     <p>A project by:</p>
     {% block footer_branding %}
     <a href="https://codeforafrica.org/" target="_blank" rel="noopener">
