--- a/our_land/templates/profile/profile_detail.html
+++ b/our_land/templates/profile/profile_detail.html
@@ -83,6 +83,7 @@
                 <td class="name" colspan="2">{{towndetails.town_name}}</td>
                 <td class="name" colspan="2">{{towndetails.class}}</td>
                 <td class="name" colspan="2">{{towndetails.number_of_transactions}}</td>
+                <td class="name" colspan="2">{{towndetails.total_hecatres}}</td>
                 <td class="name" colspan="2">{{towndetails.average_price_per_hectares}}</td>
             </tr>
             {% endfor %}
@@ -160,7 +161,7 @@
       </header>
       <div class="section-container">
         <section class="clearfix stat-row">
-          <aside style="float:left;margin-left:-14.4em;width:13em;padding:.25em .67em .67em 1.1em;">
+          <aside style="font-size: 14px;margin-left:-16.4em;width:14.4em;">
             <br/>
             <br/>
             CBOs,Community-Based Organisations, includes non-governmental organizations, churches, etc.
@@ -173,7 +174,7 @@
             </div>
         </section>
         <section class="clearfix stat-row">
-          <aside style="float:left;margin-left:-14.4em;width:13em;padding:.25em .67em .67em 1.1em;">
+          <aside style="font-size: 14px;margin-left:-16.4em;width:14.4em;">
             <br/>
             Co-ownership: Land owned by owners who are classified in different categories e.g. land parcel co-owned by Individual(s) and a Trusts, male and female, etc.
           </aside>
@@ -210,7 +211,7 @@
       </header>
       <div class="section-container">
         <section class="clearfix stat-row">
-          <aside style="float:left;margin-left:-14.4em;width:13em;padding:.25em .67em .67em 1.1em;">
+          <aside style="font-size: 14px;margin-left:-16.4em;width:14.4em;">
             <br/>
             <br />
           Erven Land: legal term used in Namibia, South Africa and Swaziland to describe a piece of
@@ -224,7 +225,7 @@
             </div>
         </section>
         <section class="clearfix stat-row">
-          <aside style="float:left;margin-left:-14.4em;width:13em;padding:.25em .67em .67em 1.1em;">
+          <aside style="font-size: 14px;margin-left:-16.4em;width:14.4em;">
             Erven includes every defined portion,
             not intended to be a public place, of a piece of land laid out as a township,
             whether or not it has been formally recognized, approved or proclaimed as such.
@@ -254,11 +255,11 @@
     </header>
     <div class="section-container">
       <section class="clearfix stat-row">
-        <aside style="float:left;margin-left:-14.4em;width:13em;padding:.25em .67em .67em 1.1em;">
+        <aside style="font-size: 14px;margin-left:-16.4em;width:14.4em;">
           <br/>
           <br/>
           Sectional Title Land: Separate ownership of units or sections within a complex or development
-        </aside style="float:left;margin-left:-14.4em;width:13em;padding:.25em .67em .67em 1.1em;">
+        </aside style="font-size: 14px;margin-left:-16.4em;width:14.4em;">
           <div class="column-half">
               <div id="chart-histogram-sectionaltitleland-sectional_title_ownership_in_hectares_per_category" data-stat-type="scaled-percentage" data-chart-title="Percent Number of Individual Sectional Title Ownership in Hectares by Category"></div>
           </div>
@@ -267,7 +268,7 @@
           </div>
       </section>
       <section class="clearfix stat-row">
-        <aside style="float:left;margin-left:-14.4em;width:13em;padding:.25em .67em .67em 1.1em;">
+        <aside style="font-size: 14px;margin-left:-16.4em;width:14.4em;">
           Trusts in terms of Trust Property Control Act, No 57 of 1988 <a href="http://www.justice.gov.za/legislation/acts/1988-57.pdf">the Trust Act</a>
         </aside>
           <div class="column-half">
@@ -304,7 +305,7 @@
     <div class="section-container">
       <section class="clearfix stat-row">
         <h2 class="header-for-columns"><a class="permalink"> Land Redistribution Programme <i class="fa fa-link"></i></a></h2>
-        <aside style="float:left;margin-left:-14.4em;width:13em;padding:.25em .67em .67em 1.1em;">
+        <aside style="font-size: 14px;margin-left:-16.4em;width:14.4em;">
           <br />
           Following centuries of colonial rule and decades of apartheid rule,
           democratic South Africa set out to redistribute rights in land as a way
@@ -364,7 +365,7 @@
       </section>
       <section class="clearfix stat-row">
         <h2 class="header-for-columns"><a class="permalink"> Land Restitution Programme <i class="fa fa-link"></i></a></h2>
-        <aside style="float:left;margin-left:-14.4em;width:13em;padding:.25em .67em .67em 1.1em;">
+        <aside style="font-size: 14px;margin-left:-16.4em;width:14.4em;">
           <br />
           Restitution of Land Rights is to offer a solution to people who had
           lost their land as a result of racially discriminatory practices such as forced removals.
