--- a/our_land/templates/about.html
+++ b/our_land/templates/about.html
@@ -7,7 +7,11 @@
         <h1>About {{ HURUMAP.name }}</h1>
         <p><em>What’s the data behind the story?</em></p>
 
-        <p>{{ HURUMAP.name }} provides useful facts about land ownership in South Africa. Compare places using tables and maps, download data, and embed charts on your site!</p>
+        <p>{{ HURUMAP.name }} {{ HURUMAP.description }}</p>
+
+        <p>{{ HURUmap.name }} provides useful facts and
+        data about land ownership in South Africa. Compare places using tables and maps,
+         download data, and embed charts on your site</p>
         {% include 'blocks/about/manifesto.html' %}
     </div>
 {% endblock %}
