hide audit report

--- a/our_land/templates/blocks/partners.html
+++ b/our_land/templates/blocks/partners.html
@@ -10,5 +10,8 @@
             <img src="{{ STATIC_URL }}img/logos/cfa.png" alt="City Press"></a>
           <a href="https://city-press.news24.com/" target="_blank" rel="noopener">
             <img src="{{ STATIC_URL }}img/logos/city-press-logo.png" alt="City Press"></a>
+            <a href="https://ourland.hurumap.org/" target="_blank" rel="noopener">
+              <img src="{{ STATIC_URL }}img/logos/our_land.png"
+              style="max-height: 85px; max-width: 350px; margin: 0px 10px 10px 15px" alt="Our Land"></a>
     </div>
 </div>
