--- a/our_land/templates/profile/profile_detail.html
+++ b/our_land/templates/profile/profile_detail.html
@@ -21,13 +21,15 @@
                     </span>
           </div>
           <ul>
-            <li><a href="#farm-land"><i class="fa fa-check"></i>
+            <!-- <li><a href="#farm-land"><i class="fa fa-check"></i>
               <span>Farms & Agricultural Land</span></a></li>
             <li><a href="#erven-land"><i class="fa fa-home"></i>
               <span>Erven & Urban Land</span></a></li>
             <li><a href="#sectional-title-land"><i class="fa fa-user"></i>
-              <span>Sectional Title Land</span></a></li>
-              <li><a href="#redistribution-restitution"><i class="fa fa-user"></i>
+              <span>Sectional Title Land</span></a></li> -->
+              <li><a href="#agricultural-land-sales"><i class="fa fa-money"></i>
+                <span>Sales of Agricultural Land</span></a></li>
+              <li><a href="#redistribution-restitution"><i class="fa fa-check"></i>
                 <span>Land Redistribution and Restitution</span></a></li>
           </ul>
         </div>
@@ -97,7 +99,7 @@
 {% endif %}
 
 {% if not landsales.landsalestransaction.is_missing or not landsales.landsaleshectares.is_missing %}
-<article id="redistribution-restitution" class="clearfix">
+<article id="agricultural-land-sales" class="clearfix">
   <header class="section-contents">
       <h1>Agricultural Land Sales</h1>
   </header>
@@ -126,12 +128,12 @@
         <div id="chart-histogram-landsales-landsalesaverageprice" data-stat-type="number" data-chart-title="Number of hectares sold in 12 months per Land Class in (R/ha)"></div>
       </div>
     </section>
-    <!-- <section class="clearfix stat-row">
+    <section class="clearfix stat-row">
       <div class="column-full-thirds">
-        <div id="chart-histogram-landsales-landsalesaveragetrends" data-stat-type="number" data-chart-title="Average trends in 12 months per Land Class"></div>
+        <div id="chart-histogram-landsales-landsalespricetrends" data-stat-type="number" data-chart-title="Average Price trends in 12 months per Land Class"></div>
       </div>
     </section>
-    <section class="clearfix stat-row">
+  <!--   <section class="clearfix stat-row">
       <div class="column-full-thirds">
         <div id="chart-histogram-landsales-landsaleslowestprice" data-stat-type="number" data-chart-title="Lowest price per Land Class(R/ha) sold in 12 months"></div>
       </div>
@@ -155,7 +157,7 @@
 </article>
 {% endif %}
 {% if not farmland.private_land_ownership_in_hectares_per_category.is_missing or not farmland.number_of_private_land_owners_by_category.is_missing %}
-  <article id="farm-land" class="clearfix">
+  <!-- <article id="farm-land" class="clearfix">
       <header class="section-contents">
           <h1>Individual Land</h1>
       </header>
@@ -202,10 +204,10 @@
             </div>
         </section>
       </div>
-  </article>
+  </article> -->
 {% endif %}
 {% if not ervenland.erven_land_ownership_in_hectares_by_race.is_missing %}
-  <article id="erven-land" class="clearfix">
+  <!-- <article id="erven-land" class="clearfix">
       <header class="section-contents">
           <h1>Erven Land</h1>
       </header>
@@ -246,10 +248,10 @@
             </div>
         </section>
       </div>
-  </article>
+  </article> -->
 {% endif %}
 {% if not sectionaltitleland.sectional_title_ownership_in_hectares_per_race.is_missing %}
-  <article id="sectional-title-land" class="clearfix">
+  <!-- <article id="sectional-title-land" class="clearfix">
     <header class="section-contents">
         <h1>Sectional Title Land</h1>
     </header>
@@ -295,7 +297,7 @@
           </div>
       </section>
     </div>
-  </article>
+  </article> -->
 {% endif %}
 {% if not redistributionandrestitution.hectarestransferredperprovincebyyear.is_missing %}
   <article id="redistribution-restitution" class="clearfix">
@@ -339,27 +341,27 @@
       </section>
       <section class="clearfix stat-row">
         <div class="column-full">
-            <div id="chart-column-redistributionandrestitution-redistributeprogrammebeneficiariesbyyear" data-chart-title="Beneficiaries Benefitted from the Redistribution Programme in the Financial Year 2009/2010 to 2017/2018"></div>
+            <div id="chart-column-redistributionandrestitution-redistributeprogrammebeneficiariesbyyear" data-chart-title="Beneficiaries Benefitted from Redistribution Programme in the Financial Year 2009/2010 to 2017/2018"></div>
         </div>
       </section>
       <section class="clearfix stat-row">
         <div class="column-full">
-            <div id="chart-column-redistributionandrestitution-redistributeprogrammehouseholdsbyyear" data-chart-title="Households Benefitted from the Redistribution Programme in the Financial Year 2009/2010 to 2017/2018"></div>
+            <div id="chart-column-redistributionandrestitution-redistributeprogrammehouseholdsbyyear" data-chart-title="Households Benefitted from Redistribution Programme in the Financial Year 2009/2010 to 2017/2018"></div>
         </div>
       </section>
       <section class="clearfix stat-row">
         <div class="column-full">
-          <div id="chart-column-redistributionandrestitution-femalepartybenefited" data-chart-title="Number of females benefited from thee Redistribution Programme in the Financial Year 2009/2010 to 2017/2018"></div>
+          <div id="chart-column-redistributionandrestitution-femalepartybenefited" data-chart-title="Number of females benefited from Redistribution Programme in the Financial Year 2009/2010 to 2017/2018"></div>
         </div>
       </section>
       <section class="clearfix stat-row">
         <div class="column-full">
-          <div id="chart-column-redistributionandrestitution-disabledpeoplepartybenefited" data-chart-title="Number of disabled people benefited from the Redistribution Programme in the Financial Year 2009/2010 to 2017/2018"></div>
+          <div id="chart-column-redistributionandrestitution-disabledpeoplepartybenefited" data-chart-title="Number of disabled people benefited from Redistribution Programme in the Financial Year 2009/2010 to 2017/2018"></div>
         </div>
       </section>
       <section class="clearfix stat-row">
         <div class="column-full">
-          <div id="chart-column-redistributionandrestitution-youthpartybenefited" data-chart-title="Number of youth benefited from the Redistribution Programme in the Financial Year 2009/2010 to 2017/2018"></div>
+          <div id="chart-column-redistributionandrestitution-youthpartybenefited" data-chart-title="Number of youth benefited from Redistribution Programme in the Financial Year 2009/2010 to 2017/2018"></div>
         </div>
 
       </section>
