--- a/hurumap_zw/templates/homepage.html
+++ b/hurumap_zw/templates/homepage.html
@@ -1,2 +1,2 @@
-{% extends 'homepage_country.html' %}{% load humanize partition staticfiles %}
+{% extends 'homepage.html' %}{% load humanize partition staticfiles %}
 
