--- a/hurumap_zw/templates/profile/profile_detail.html
+++ b/hurumap_zw/templates/profile/profile_detail.html
@@ -1,174 +1,40 @@
 {% extends 'profile/profile_detail.html' %} {% load humanize lookup staticfiles %}
 
 {% block header_content %}
-    <div class="floating-nav-wrapper" id="sticky-nav">
-        <nav class="floating-nav affix-top" data-spy="affix" data-offset-top="197">
-            <div class="wrapper clearfix">
-                <div class="geography-ico">
-                    <span><img
-                        src="{% static 'img/icons/favicon.ico' %}">{{ geography.this.name }}
-                    </span>
-                </div>
-
-                <ul>
-                    <li><a href="#demographics"><i class="fa fa-user"></i>
-                        <span>Demographics</span></a></li>
-                    <li><a href="#elections2016"><i class="fa fa-check"></i>
-                        <span>Elections</span></a></li>
-                    <li><a href="#households"><i class="fa fa-home"></i>
-                        <span>Households</span></a></li>
-                    <li><a href="#disability"><i
-                            class="fa fa-medkit"></i>
-                        <span>Disability</span></a></li>
-                </ul>
-            </div>
-        </nav>
-    </div>
-
-    {{ block.super }}
+  {{ block.super }}
 {% endblock %}
 
 {% block profile_header_tail %}
-    <div class="column-full">
-        <p class="caption"><strong>Census data:</strong> 2014</p>
-    </div>
+  <div class="column-full">
+    <p class="caption"><strong>Census data:</strong> 2017</p>
+  </div>
 {% endblock %}
 
 {% block profile_detail %}
-    <article id="demographics"
-             class="clearfix {% if 'demographics' not in selected_sections %}hide{% endif %}">
-        <header class="section-contents">
-            <h1>Demographics</h1>
-        </header>
-        <div class="section-container">
-
-            <section class="clearfix stat-row">
-                <h2 class="header-for-columns">
-                    <a class="permalink"
-                       href="#pop_count"
-                       id="pop_count">Population <i
-                            class="fa fa-link"></i></a></h2>
-                <div class="column-quarter">
-                    {% include 'profile/_blocks/_stat_list.html' with stat=demographics.total_population stat_type='number' %}
-                </div>
-                <div class="column-quarter"
-                     id="chart-pie-demographics-sex_ratio"
-                     data-stat-type="percentage" data-chart-title="Sex"></div>
-                <div class="column-quarter">
-                    {% include 'profile/_blocks/_stat_list.html' with stat=demographics.urbanised stat_type='percentage' %}
-                </div>
-                <div class="column-quarter"
-                     id="chart-grouped_column-demographics-urban_distribution"
-                     data-stat-type="scaled-percentage"
-                     data-chart-title="Urban vs rural by sex"></div>
-            </section>
-
-        </div>
+  {% if not demographics.is_missing %}
+    <article class="clearfix">
+      <header class="section-contents">
+        <h1>Demographics</h1>
+      </header>
+      <div class="section-container">
+        <section class="clearfix stat-row">
+          <h2 class="header-for-columns">Population </h2>
+          <div class="column-third">
+            {% include 'profile/_blocks/_stat_list.html' with stat=demographics.total_population stat_type='number' %}
+          </div>
+          {% if not demographics.sex_dist.is_missing %}
+            <div class="column-third" id="chart-pie-demographics-sex_dist" data-stat-type="percentage" data-chart-title="Sex" data-initial-sort="-value"></div>
+          {% endif %}
+          {% if not demographics.residence_dist.is_missing %}
+            <div class="column-third" id="chart-histogram-demographics-residence_dist" data-stat-type="scaled-percentage" data-chart-title="Residence" data-initial-sort="-value"></div>
+          {% endif %}
+        </section>
+        <section class="clearfix stat-row">
+          {% if not demographics.religion_dist.is_missing %}
+            <div class="column-full" id="chart-histogram-demographics-religion_dist" data-stat-type="scaled-percentage" data-chart-title="Religion" data-initial-sort="-value"></div>
+          {% endif %}
+        </section>
+      </div>
     </article>
-
-    <article id="households"
-             class="clearfix {% if 'households' not in selected_sections %}hide{% endif %}">
-        <header class="section-contents">
-            <h1>Households</h1>
-        </header>
-        <div class="section-container">
-
-            <section class="clearfix stat-row">
-                <h2><a class="permalink" href="#households">Households <i
-                        class="fa fa-link"></i></a></h2>
-                <div class="column-third">
-                    {% include 'profile/_blocks/_stat_list.html' with stat=households.total_households stat_type='number' %}
-                </div>
-            </section>
-            <section class="clearfix stat-row">
-                <h2><a class="permalink" href="#households-water"
-                       id="households-water">Percentage by Permanency <i
-                        class="fa fa-link"></i></a></h2>
-                <div class="column-three-quarters"
-                     id="chart-histogram-households-percentage_by_permanency"
-                     data-stat-type="scaled-percentage"
-                     data-chart-title="Households Percentage by permanency"></div>
-            </section>
-            <section class="clearfix stat-row">
-                <h2><a class="permalink" href="#households-lighting"
-                       id="households-lighting">Main source of lighting <i
-                        class="fa fa-link"></i></a></h2>
-                <div class="column-three-quarters"
-                     id="chart-histogram-households-light_source_distribution"
-                     data-stat-type="scaled-percentage"
-                     data-chart-title="Light source distribution"></div>
-            </section>
-            <section class="clearfix stat-row">
-                <h2><a class="permalink" href="#households-lighting"
-                       id="households-lighting">Main source of energy <i
-                        class="fa fa-link"></i></a></h2>
-                <div class="column-three-quarters"
-                     id="chart-histogram-households-energy_source_distribution"
-                     data-stat-type="scaled-percentage"
-                     data-chart-title="Energy source distribution"></div>
-            </section>
-
-        </div>
-    </article>
-
-    <article id="disability"
-             class="clearfix {% if 'households' not in selected_sections %}hide{% endif %}">
-        <header class="section-contents">
-            <h1>Population with disability</h1>
-        </header>
-        <div class="section-container">
-            <section class="clearfix stat-row">
-                <h2><a class="permalink" href="#households">Population <i
-                        class="fa fa-link"></i></a></h2>
-                <div class="column-quarter">
-                    {% include 'profile/_blocks/_stat_list.html' with stat=disability.total_ stat_type='number' %}
-                </div>
-                <div class="column-quarter"
-                     id="chart-pie-disability-disabled_or_not_distribution"
-                     data-stat-type="percentage"
-                     data-chart-title="With or Without Disability"></div>
-                <div class="column-quarter">
-                    {% include 'profile/_blocks/_stat_list.html' with stat=disability.total_disabled stat_type='percentage' %}
-                </div>
-                <div class="column-quarter"
-                     id="chart-pie-disability-disability"
-                     data-stat-type="percentage"
-                     data-chart-title="Type of disability"></div>
-            </section>
-
-        </div>
-    </article>
-
-    <article id="elections2016"
-             class="clearfix">
-        <header class="section-contents">
-            <h1>2016 Elections</h1>
-        </header>
-        <div class="section-container">
-            <section class="clearfix stat-row">
-                <h2><a class="permalink" href="#households">Votes Cast <i
-                        class="fa fa-link"></i></a></h2>
-                <div class="column-third">
-                    {% include 'profile/_blocks/_stat_list.html' with stat=elections2016.total_votes stat_type='number' %}
-                </div>
-
-                <div class="column-third">
-                    {% include 'profile/_blocks/_stat_list.html' with stat=elections2016.museveni_votes stat_type='percentage' %}
-                </div>
-
-                <div class="column-third">
-                    {% include 'profile/_blocks/_stat_list.html' with stat=elections2016.besigye_votes stat_type='percentage' %}
-                </div>
-
-            </section>
-
-            <section class="clearfix stat-row">
-                <div class="column-three-quarters"
-                     id="chart-histogram-elections2016-candidate_distribution"
-                     data-stat-type="scaled-percentage"
-                     data-chart-title="Votes Distribution"></div>
-            </section>
-        </div>
-    </article>
-
+  {% endif %}
 {% endblock %}
